--- a/css-files/hero.css
+++ b/css-files/hero.css
@@ -12,6 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #f2f2f2;
 }
 
 main {
@@ -23,7 +24,7 @@ main {
   background-color: linear-gradient(180deg, rgba(53, 66, 103, 0.0001) 0%, #151824 95.04%);
   color: #ffffff;
   width: 100%;
-  height: 100vh;
+  height: 962px;
   display: flex;
   justify-content: center;
   position: relative;
