--- a/css-files/footer.css
+++ b/css-files/footer.css
@@ -39,3 +39,35 @@ footer {
   line-height: 24px;
   color: #ffffff;
 }
+
+@media (max-width: 860px) {
+  .left {
+    flex: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1b7dff;
+  }
+
+  .right {
+    flex: 8;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .right ul li:first-child {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #ffffff;
+  }
+
+  .right ul li {
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #ffffff;
+  }
+}
