--- a/css-files/today-top-places.css
+++ b/css-files/today-top-places.css
@@ -27,8 +27,7 @@
 .today-top-places .gd {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 58px;
-  color: 52px;
+  gap: 10px;
 }
 
 .today-top-places .gd .top-place-card {
@@ -103,4 +102,207 @@
   outline: none;
   background: #006dfe;
   color: #ffffff;
+}
+
+@media (max-width: 1180px) {
+  .today-top-places {
+    font-family: 'Lato', sans-serif;
+    width: 95%;
+  }
+
+  .today-top-places h2 {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 40px;
+    color: #102746;
+    margin-bottom: 45px;
+  }
+
+  .today-top-places .gd {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+  }
+
+  .today-top-places .gd .top-place-card {
+    width: 290px;
+    height: 530px;
+  }
+
+  .img-wrapper .description {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 235px;
+    background: rgba(21, 24, 36, 0.6);
+  }
+
+  .description .place-name {
+    font-size: 16px;
+  }
+
+  .description .reaction {
+    width: 150px;
+  }
+
+  .reaction div span,
+  .reaction div .far {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .top-place-card p {
+    margin-top: 42px;
+  }
+}
+
+@media (max-width: 944px) {
+  .today-top-places {
+    font-family: 'Lato', sans-serif;
+    width: 95%;
+  }
+
+  .today-top-places h2 {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 42px;
+    color: #102746;
+    margin-bottom: 45px;
+  }
+
+  .today-top-places .gd {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8px;
+  }
+
+  .today-top-places .gd .top-place-card {
+    width: 280px;
+    height: 480px;
+  }
+
+  .img-wrapper .description {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    top: 225px;
+  }
+
+  .description .place-name {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .reaction div {
+    display: flex;
+    width: 53px;
+    justify-content: space-evenly;
+  }
+
+  .reaction div span,
+  .reaction div .far {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .top-place-card p {
+    margin-top: 40px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    color: #102746;
+  }
+
+  .top-place-card button {
+    margin-top: 18px;
+    width: 114px;
+    height: 40px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    border: none;
+    outline: none;
+    background: #006dfe;
+    color: #ffffff;
+  }
+}
+
+@media (max-width: 860px) {
+  .today-top-places {
+    font-family: 'Lato', sans-serif;
+    width: 95%;
+  }
+
+  .today-top-places h2 {
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 42px;
+    color: #102746;
+    margin-bottom: 50px;
+  }
+
+  .today-top-places h2::after {
+    width: 230px;
+  }
+
+  .today-top-places .gd {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+  }
+
+  .today-top-places .gd .top-place-card {
+    width: 210px;
+    height: 376px;
+  }
+
+  .img-wrapper .description {
+    position: absolute;
+    width: 100%;
+    height: 45px;
+    top: 200px;
+  }
+
+  .description .place-name {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .description .reaction {
+    width: 100px;
+  }
+
+  .reaction div {
+    display: flex;
+    width: 50px;
+    justify-content: space-evenly;
+  }
+
+  .reaction div span,
+  .reaction div .far {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+  }
+
+  .top-place-card p {
+    margin-top: 45px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    color: #102746;
+  }
+
+  .top-place-card button {
+    margin-top: 8px;
+    width: 112px;
+    height: 32px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 16px;
+  }
 }
